updates, but running slow

--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,11 +169,11 @@
      "output_type": "stream",
      "text": [
       "processing pdf: /workspace/data/compliance/FSI_Factsheet.pdf\n",
-      "Started parsing the file under job_id db4fe127-6cd9-4364-9271-c2d777ca54ff\n",
-      ".processing pdf: /workspace/data/compliance/FSI_Press_Release.pdf\n",
-      "Started parsing the file under job_id b64659eb-8e04-423f-b1b6-c845f68a7859\n",
+      "Started parsing the file under job_id 6fb3a07c-ecbf-44de-820a-43d5b53f9027\n",
+      "processing pdf: /workspace/data/compliance/FSI_Press_Release.pdf\n",
+      "Started parsing the file under job_id 5b6f95b3-ef6c-4da5-a440-183b058d4640\n",
       "processing pdf: /workspace/data/compliance/FSI_Rule_proposal.pdf\n",
-      "Started parsing the file under job_id 4e6c62c8-0e05-40a9-8daa-bc892ad9daf8\n"
+      "Started parsing the file under job_id 9032df55-f432-43ca-a6f4-eed851a14bdd\n"
      ]
     }
    ],
@@ -186,6 +186,7 @@
     "access_token = os.getenv('HF_TOKEN')\n",
     "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
     "\n",
+    "pdf_urls = [\"/workspace/data/compliance/FSI_Factsheet.pdf\", \"/workspace/data/compliance/FSI_Press_Release.pdf\", \"/workspace/data/compliance/FSI_Rule_proposal.pdf\"]\n",
     "pdf_urls = [\"/workspace/data/compliance/FSI_Factsheet.pdf\", \"/workspace/data/compliance/FSI_Press_Release.pdf\", \"/workspace/data/compliance/FSI_Rule_proposal.pdf\"]\n",
     "descriptions = [\"Factsheet about newly proposed SEC rule.\", \"Press release regarding newly proposed SEC rule.\", \"The full text of the newly proposed SEC rule.\"]\n",
     "documents_proposal = extract_text_from_pdf(pdf_urls, llama_api_key, llamaparse_kwargs={\"split_by_page\":False}, save_json_path=None)\n",
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -382,236 +383,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8e68d9a889340e79f0361713ce0b8ec",
+       "model_id": "4aa29fdf4b034b4eb505fbb48fd8bcb8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b99161a860b34e65aded5c8bd63d0610",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "modules.json:   0%|          | 0.00/316 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b843a9cb96141c0a4e2e8c687482a9d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config_sentence_transformers.json:   0%|          | 0.00/397 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32102d460a2b4a05940e6487c389aa2b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/174k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01baf6f040b44948828724d22c5f6dfe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "sentence_bert_config.json:   0%|          | 0.00/51.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4280509f82e4bb4ac67c22b8dfc4b66",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/844 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7135b14adc443aba7d6f7f1557208c8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/6.17G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "384342f5b0564d54b2210b00bb2be52a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/1.31k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e499470fa1f440848809a27a60d76110",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json:   0%|          | 0.00/2.78M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb3cf6010fb8492eb5881e0d1aefe681",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt:   0%|          | 0.00/1.67M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59d3169affb44270a1d14a605bb01737",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/7.03M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa08cbba87cc4937883c2c5e09a0a83e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "added_tokens.json:   0%|          | 0.00/80.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92ead8e0977e4b16a96daf09290a3ce2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/370 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b73a0fc5611540fdb3d17140716e9d5b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "1_Pooling/config.json:   0%|          | 0.00/289 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e2844ff23de448d850ea6fcdea5de3f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "2_Dense_1024/config.json:   0%|          | 0.00/122 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d41f034be9cf4bdf9499bfdc556050e9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/6.30M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a88e1af281d14f3a8691e91fd042ddae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/6.30M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -768,13 +545,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1b506a71681447aaaf0e85ebe60d7d5",
+       "model_id": "99afcc9ef2fd41e88819c4a629ed9269",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,12 +565,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c416b68299924bae9f8d3577a71ebd8f",
+       "model_id": "6a0923b5a54f45a29e27e9e6131a2a34",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Generating embeddings:   0%|          | 0/58 [00:00<?, ?it/s]"
+       "Generating embeddings:   0%|          | 0/60 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -809,7 +586,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c84410db702e4ff78475cc67b9a6e9ac",
+       "model_id": "3f8dd518d31b49f1a1b11a42668cec28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -823,7 +600,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3ffd44a3c1140848980481fa8429b12",
+       "model_id": "40c2881791af473c94c5088aa9918c2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -837,7 +614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc5800ae2de24b0fb12fffdad16127c3",
+       "model_id": "10ff055da7aa4ba0a42c1aefe2638443",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,7 +628,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9536b9efa7864c349f7735b1ac08e86e",
+       "model_id": "e5c06da82a0f49e9b815c3d9b3a1afdc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -897,12 +674,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = query_engine.query(\"Give a summary of the entire proposed rule. What are the key points?\")"
+    "response = query_engine.query(\"Summarize section IX\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Based on the provided context, there is no specific mention of the number of sections in the newly proposed SEC rule. The factsheet discusses various aspects of the proposal but does not quantify the number of sections it contains.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1233,34 +1035,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9aed1ec9d7d4fe2a85ba1a2830af2d0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "211"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core.node_parser import SentenceSplitter\n",
     "\n",
@@ -1271,17 +1048,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core.response_synthesizers import TreeSummarize\n",
     "summarizer = TreeSummarize(llm=llm, verbose=True)\n",
@@ -1295,38 +1064,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "After carefully reviewing the provided documents, I can summarize the key points, sections, and rules that would be most relevant for a compliance officer as follows:\n",
-      "\n",
-      "1. The rulemaking proposes to require investment advisers (RIAs) and exempt reporting advisers (ERAs) to establish and implement Customer Identification Programs (CIPs) as part of their anti-money laundering/countering the financing of terrorism (AML/CFT) compliance programs, pursuant to section 326 of the Uniting and Strengthening America by Providing Appropriate Tools Required to Intercept and Obstruct Terrorism Act of 2001 (USA PATRIOT Act). This would align investment advisers with CIP requirements for other financial institutions.\n",
-      "\n",
-      "2. The proposed rule includes definitions for key terms such as \"account\", \"customer\", \"financial institution\", and \"investment adviser\". For example, an account is defined to include any contractual or business relationship between a person and an investment adviser providing advisory services. A customer is the person who opens a new account with an investment adviser.\n",
-      "\n",
-      "3. The proposed CIP must include minimum requirements such as:\n",
-      "- Verifying the identity of customers using risk-based procedures, to the extent reasonable and practicable, within a reasonable time before or after account opening\n",
-      "- Obtaining and maintaining records of identifying customer information (name, address, date of birth/formation, identification number) \n",
-      "- Comparing customers against government lists of known or suspected terrorists or terrorist organizations\n",
-      "- Providing customers with notice that identity info is being requested to verify their identities\n",
-      "\n",
-      "4. Investment advisers may rely on other financial institutions to perform some CIP procedures for shared customers under certain conditions, such as if the customer has accounts at both entities and the other institution is regulated by a Federal functional regulator.\n",
-      "\n",
-      "5. The proposed rule allows investment advisers with advisory relationships with mutual funds or other registered investment companies to deem their requirements satisfied if the fund's own CIP meets applicable requirements. \n",
-      "\n",
-      "6. Investment advisers would be required to retain records of CIP-related information for 5 years after an account is closed, and to make and maintain a record of all customer identification info obtained.\n",
-      "\n",
-      "In summary, this proposed rulemaking would significantly impact compliance obligations for RIAs and ERAs by requiring them to implement comprehensive CIPs as part of their AML/CFT programs. The definitions provided would need to be incorporated into compliance policies and procedures at covered firms. Compliance officers will need to oversee implementation of these new requirements in addition to coordinating with other financial institutions if they rely on each other's CIP for shared customers. Maintaining required records is another key responsibility highlighted by this rulemaking.\n",
-      "\n",
-      "Let me know if you need any clarification or have additional documents to review. I'm happy to further analyze and summarize relevant points from any other materials you provide.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core.agent.function_calling \n",
     "response_information_tool = []\n",
@@ -2645,7 +2385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
