--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -57,19 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pulling Ollama model...\n",
-      "context_window=128000 num_output=256 is_chat_model=True is_function_calling_model=False model_name='llama3.1:latest' system_role=<MessageRole.SYSTEM: 'system'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# TODO: notify if ollama server is running with model loaded\n",
     "import subprocess, os\n",
     "from llama_index.core import Settings\n",
     "from llama_index.llms.ollama import Ollama\n",
@@ -78,10 +70,10 @@
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
     "# model_name, ctx_len = \"gpt-4o\", 128000\n",
-    "model_name, ctx_len = \"llama3.1:latest\", 128000\n",
-    "# model_name, ctx_len = \"mistral-nemo:12b\", 128000\n",
+    "# model_name, ctx_len = \"llama3.1:latest\", 128000\n",
+    "# model_name, ctx_len = \"solar-pro:latest\", 128000\n",
     "# model_name, ctx_len = \"hermes3:8b\", 128000\n",
-    "# model_name, ctx_len = \"gemma2:27b\", 8192\n",
+    "model_name, ctx_len = \"gemma2:latest\", 8192\n",
     "\n",
     "\n",
     "if model_name == \"gpt-4o\":\n",
@@ -639,216 +631,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Summarizing section 1/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "962387263f234a7b865886b21461b01f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n",
-      "Summarizing section 2/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "383777ef85f843fdb44a6e46f92c1c68",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n",
-      "Summarizing section 3/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a7e17965549449f87afc06d0eba76dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n",
-      "Summarizing section 4/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14a521614f4842c1ab0ff103a0f5bb2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n",
-      "Summarizing section 5/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c049597aa2b42d58e66873dec1638df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n",
-      "Summarizing section 6/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcf5131c6c5d4ddabb344d00614471c5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n",
-      "Summarizing section 7/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61fdc7da850748f4879f1977edff726c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n",
-      "Summarizing section 8/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d255dbd2d969482a8f51c0d9c29a0e66",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n",
-      "Correcting list format...\n",
-      "   Rewrote list 1 times.\n",
-      "Summarizing section 9/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31e668ddb7c6417eb8cd3fff7ef02451",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core.response_synthesizers import TreeSummarize\n",
     "from llama_index.core.node_parser import SentenceSplitter\n",
@@ -927,34 +712,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['31 CFR 1032', '17 CFR 275', 'Uniting and Strengthening America by Providing Appropriate Tools Required to Intercept and Obstruct Terrorism Act of 2001', 'Bank Secrecy Act']\n",
-      "\n",
-      "['12 U.S.C. 1829b', '12 U.S.C. 1951-1960', '31 U.S.C. 310', '31 U.S.C. 5311-5336', '31 CFR chapter X', 'Treasury Order 180 –01', '31 U.S.C. 5318(l)', '31 U.S.C. 5318( l)(2)', '15 U.S.C. 80b', '17 CFR part 275', '12 U.S.C. 1843(k)(4)(C)', '15 U.S.C. 6809(2)', '12 CFR 21.21(c)(2)', '12 CFR 208.63(b)(2)', '12 CFR 326.8(b)(2)', '12 CFR 5.34(e)(3)', '12 CFR 5.38(e)(3)', '31 CFR 1020.220', '31 CFR 1023.220', '31 CFR 1024.220', '31 CFR 1026.220', '15 U.S.C. 80b-2(a)(11)', '15 U.S.C. 6809(2)', '12 U.S.C. 1829b', '12 U.S.C. 1951-1960', '31 U.S.C. 310', '31 U.S.C. 5311-5336', '31 CFR chapter X', 'Treasury Order 180 –01', '31 U.S.C. 5318(l)', '31 U.S.C. 5318( l)(2)', '15 U.S.C. 80b', '17 CFR part 275']\n",
-      "\n",
-      "['Section 1032.100(a)', 'Section 326', '31 U.S.C. 5318(l)(2)', '31 U.S.C. 80b-3(a)', '15 U.S.C. 80b-2(a)(11)', '31 CFR 1010.100(t)', '31 U.S.C. 5312(a)(2) and (c)(1)', 'Section 1032.220(a)(1)', 'Section 326', '31 U.S.C. 5318(h)', '31 CFR 1024.220', '31 CFR 1023.100(d)(2)', '17 CFR 275.203(l)–1', '17 CFR 275.203(m)–1', 'Section 1032.220(a)(2)(i)', 'Section 1032.220(a)(2)(ii)', 'Section 1032.220(a)(3)', '31 U.S.C. 5318(l)(2)(B)', 'Section 1032.220(a)(4)', '31 U.S.C. 5318(l)(2)(C)', 'Section 1032.220(a)(5)', 'Section 1032.220(a)(6)', '31 CFR 1023.220', '31 CFR 1010.230']\n",
-      "\n",
-      "['31 CFR 1020.220(c)', '31 CFR 1023.220', '31 CFR 1024.220', '31 CFR 1026.220', '15 U.S.C. 80b-2(a)(11)', '31 CFR Chapter X', '§ 1032.220(a)(2)']\n",
-      "\n",
-      "['Section 326 of the USA PATRIOT Act', 'Executive Orders 12866, 13563, and 14094 (E.O. 12866 and its amendments)', 'Regulatory Flexibility Act (RFA)', 'Paperwork Reduction Act (PRA)', 'Unfunded Mandates Reform Act of 1995 (UMRA)', '31 CFR 1010.100(t)', '31 U.S.C. 5318(l)(2)', '31 CFR 1020.220(a)(4)', '31 CFR 1023.220(a)(4)', '31 CFR 1024.220(a)(4)', '31 CFR 1026.200(a)(4)', 'Section 5 of the Investment Company Act (15 U.S.C. 80a –5)', 'Section 8 of the Investment Company Act (15 U.S.C. 80a –8)', 'Rule 6c -11 under the Investment Company Act', 'The Cayman Islands Private Fund Act (2021 Revision)', '31 CFR 1010.100(gg)', 'Section 3 of the Investment Company Act (15 U.S.C. 80a–3)']\n",
-      "\n",
-      "['Section 3(a) of the Regulatory Flexibility Act', '31 CFR part 1032', 'Section 326 of the USA PATRIOT Act as amended and codified at 31 USC 5318(l)', 'Section 203A of the Advisers Act', '15 U.S.C. 80b-3', '12 CFR 5.34(e)(3) and 5.38(e)(3)', '5 U.S.C. 603(a)', '31 U.S.C. 5318 is part of the BSA', '31 USC 5318(l)', '17 CFR 275.0-7', 'Section 326 of the USA PATRIOT Act']\n",
-      "\n",
-      "['SBREFA', '5 U.S.C.', '15 U.S.C.', 'Executive Order 12866', 'Executive Order 13563', 'Executive Order 14094', '44 U.S.C. 3507(d)', 'USA PATRIOT ACT section 326']\n",
-      "\n",
-      "['UMRA', 'section 202(a)', '31 CFR 1010.100(gg)', '31 U.S.C. 5311-5314 and 5316-5336', '12 U.S.C. 1829b and 1951–1959', 'title III, sec. 314, Pub. L. 107–56, 115 Stat. 307', '2 USC 1532(a)', '15 U.S.C. 80b-3(a)', '15 U.S.C. 80b-3(l), (m)', '31 U.S.C. 5318(h)', 'IX', 'IV', 'V.B.', 'Sec. 1032.100 Definitions', 'Subpart A —General', 'Sec. 1010.100 of this chapter', 'Part 1032—RULES FOR INVESTMENT ADVISERS', '31 U.S.C. 5312(a)(2) and (c)(1)', '15 U.S.C. 80b-3(a)', '15 U.S.C. 80b-3(l), (m)', 'Sec. 1032.220 Customer identification programs for registered investment advisers and exempt reporting advisers', '31 CFR 1010.100(gg)']\n",
-      "\n",
-      "[]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for ex in extracted_regs:\n",
     "    print(ex)\n",
@@ -963,60 +723,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 3\n",
-      "33 12\n",
-      "24 16\n",
-      "7 4\n",
-      "17 1\n",
-      "11 10\n",
-      "8 6\n",
-      "22 3\n",
-      "0 11\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(extracted_regs)):\n",
-    "    print(len(extracted_regs[i]), len(nemo[i]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(extracted_regs[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['V. Paperwork Reduction Act', 'Paperwork Reduction Act of 1995 (PRA)', '44 U.S.C. 3501.', '44 U.S.C. 3507(d); 5 CFR 1320.11.', '31 U.S.C. 5318(l).', 'USA PATRIOT Act', 'Section 326 of the USA PATRIOT ACT', 'Customer Identification Program (CIP) regulations', 'FinCEN, Anti-Money Laundering/Countering the Financing of Terrorism Program and Suspicious Activity Report Filing Requirements for Registered Investment Advisers and Exempt Reporting Advisers, 89 FR 12108 (proposed Feb. 15, 2024).', '31 CFR part 1032', '31 CFR 1032.220']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(nemo[-1])"
    ]
@@ -1055,13 +773,14 @@
    "source": [
     "goods=0\n",
     "bads=0\n",
-    "for i,(sec,summary) in enumerate(zip(sections, section_summaries)):\n",
-    "    for number in numbers:\n",
+    "for i,(sec,ex) in enumerate(zip(sections, nemo)):\n",
+    "    for number in ex:\n",
     "        if number not in sec:\n",
     "            bads+=1\n",
     "            print(f\"{number} not in section {i}!\")\n",
     "        else:\n",
-    "            goods+=1"
+    "            goods+=1\n",
+    "print(f\"goods {goods}, bads {bads}\")"
    ]
   },
   {
