--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -69,14 +69,14 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
-    "# model_name, ctx_len = \"gpt-4o\", 128000\n",
-    "# model_name, ctx_len = \"llama3.1:latest\", 128000\n",
+    "model_name, ctx_len = \"gpt-4o-2024-08-06\", 128000\n",
+    "# model_name, ctx_len = \"llama3.1:8b-instruct-q8_0\", 128000\n",
     "# model_name, ctx_len = \"solar-pro:latest\", 128000\n",
     "# model_name, ctx_len = \"hermes3:8b\", 128000\n",
-    "model_name, ctx_len = \"gemma2:latest\", 8192\n",
+    "# model_name, ctx_len = \"gemma2:latest\", 8192\n",
     "\n",
     "\n",
-    "if model_name == \"gpt-4o\":\n",
+    "if \"gpt-4o\" in model_name:\n",
     "    openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "    os.environ[\"OPENAI_API_KEY\"] = openai_key\n",
     "    \n",
@@ -96,6 +96,15 @@
     "    print(llm.metadata)\n",
     "\n",
     "Settings.llm = llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOpenAI?"
    ]
   },
   {
@@ -698,7 +707,7 @@
     "    3. Is detailed, thorough, and specific in its coverage of all key points.\n",
     "    4. Avoids adding any introductory or concluding remarks outside the scope of the summary itself.\n",
     "\n",
-    "    Here are some (not all) of the regulatory sections, rules, and acts:\n",
+    "    Here are some of the regulatory sections, rules, and acts:\n",
     "    {extracted_reg} \n",
     "    \"\"\"\n",
     "    print(f\"Summarizing section {i+1}/{len(sections)}...\")\n",
@@ -727,68 +736,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(extracted_regs[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(nemo[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nemo=[['31 CFR 1032', '17 CFR 275', 'Uniting and Strengthening America by Providing Appropriate Tools Required to Intercept and Obstruct Terrorism Act of 2001'],\n",
-    "\n",
-    "\n",
-    "['Bank Secrecy Act (BSA)', '31 U.S.C. § 5311 et seq.', '12 U.S.C. 1829b', '12 U.S.C. 1951-1960', '31 U.S.C. 310, 5311-5314, 5316-5336', '31 CFR chapter X', 'USA PATRIOT Act', 'Uniting and Strengthening America by Providing Appropriate Tools Required to Intercept and Obstruct Terrorism Act of 2001', 'Investment Advisers Act of 1940', '15 U.S.C. § 80b', '17 CFR part 275', 'Gramm-Leach-Bliley Act'],\n",
-    "\n",
-    "['Bank Secrecy Act (BSA)', '- Section 326', '- Section 5318(l)(2)', 'USA PATRIOT Act', '- Section 301', '- Section 319', 'Financial Action Task Force (FATF) standards', 'Employee Retirement Income Security Act (ERISA)', 'Securities Exchange Commission (SEC) regulations', '- Advisers Act Rule 204-2', '- Other provisions related to information that must be obtained, verified, or maintained', 'Anti-Money Laundering (AML) and Counter-Terrorism Financing (CTF) Program', '- Proposed rule: Requires investment advisers to implement an AML/CTF program, including customer identification procedures.', '- SAR Proposed Rule: Requires investment advisers to file suspicious activity reports in certain circumstances.', 'Social Security Administration (SSA)', \"U.S. Treasury's Office of Foreign Assets Control (OFAC) lists\"],\n",
-    "\n",
-    "['31 CFR 1020.220(c)', '15 U.S.C. 80b-2(a)(11)', 'ERISA', 'section 326'],\n",
-    "\n",
-    "['Section 326 of the USA PATRIOT Act'],\n",
-    "\n",
-    "['Regulatory Flexibility Act', 'section 3(a) of the Regulatory Flexibility Act (RFA)', '31 CFR part 1032', 'section 326 of the USA PATRIOT Act as amended and codified at 31 USC 5318(l)', 'Anti- Money Laundering/Countering the Financing of Terrorism Program and Suspicious Activity Report Filing Requirements for Registered Investment Advisers and Exempt Reporting Advisers, 89 FR 12108 (proposed Feb. 15, 2024)', 'section 326 of the USA PATRIOT Act require s Treasury and the Commission to prescribe regulations setting forth minimum standards for investment advisers regarding the identities of customers when they open an account', 'section 326(l)(4) of the USA PATRIOT Act (15 U.S.C. 78q-1(f)(4))', 'Advisers Act rule 0-7(a) (17 CFR 275.0-7)', '15 U.S.C. 80b-3', 'Investment Advisers Act of 1940 (the Advisers Act)'],\n",
-    "\n",
-    "['Small Business Regulatory Enforcement Fairness Act of 1996 (SBREFA)', 'Pub. L. 104- 121, tit. II, 110 Stat. 857 (1996) (codified in various sections of 5 U.S.C., 15 U.S.C. and as a note to 5 U.S.C. 601)', 'Executive Orders 12866, 13563, and 14094', 'E.O. 12866 and its amendments', 'E.O. 13563', 'USA PATRIOT ACT'],\n",
-    "\n",
-    "['Unfunded Mandates Reform Act (section 202(a))', 'Investment Advisers Act of 1940 (15 U.S.C. 80b-3)', 'Bank Secrecy Act'],\n",
-    "\n",
-    "['V. Paperwork Reduction Act', 'Paperwork Reduction Act of 1995 (PRA)', '44 U.S.C. 3501.', '44 U.S.C. 3507(d); 5 CFR 1320.11.', '31 U.S.C. 5318(l).', 'USA PATRIOT Act', 'Section 326 of the USA PATRIOT ACT', 'Customer Identification Program (CIP) regulations', 'FinCEN, Anti-Money Laundering/Countering the Financing of Terrorism Program and Suspicious Activity Report Filing Requirements for Registered Investment Advisers and Exempt Reporting Advisers, 89 FR 12108 (proposed Feb. 15, 2024).', '31 CFR part 1032', '31 CFR 1032.220']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "goods=0\n",
-    "bads=0\n",
-    "for i,(sec,ex) in enumerate(zip(sections, nemo)):\n",
-    "    for number in ex:\n",
-    "        if number not in sec:\n",
-    "            bads+=1\n",
-    "            print(f\"{number} not in section {i}!\")\n",
-    "        else:\n",
-    "            goods+=1\n",
-    "print(f\"goods {goods}, bads {bads}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "goods=0\n",
     "bads=0\n",
     "for i,(sec,summary) in enumerate(zip(sections, section_summaries)):\n",
@@ -800,7 +747,9 @@
     "            bads+=1\n",
     "            print(f\"{number} not in section {i}!\")\n",
     "        else:\n",
-    "            goods+=1"
+    "            goods+=1\n",
+    "\n",
+    "print(f\"Goods: {goods}, Bads: {bads}\")"
    ]
   },
   {
@@ -905,6 +854,20 @@
     "# 31 CFR 1023.220 (Customer Identification Program rule for broker-dealers)\n",
     "# 31 CFR 1020.220 (CIP regulation)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
