--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -57,9 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pulling Ollama model...\n",
+      "context_window=128000 num_output=256 is_chat_model=True is_function_calling_model=False model_name='llama3.1:8b-instruct-q8_0' system_role=<MessageRole.SYSTEM: 'system'>\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: notify if ollama server is running with model loaded\n",
     "import subprocess, os\n",
@@ -69,8 +78,8 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
-    "model_name, ctx_len = \"gpt-4o-2024-08-06\", 128000\n",
-    "# model_name, ctx_len = \"llama3.1:8b-instruct-q8_0\", 128000\n",
+    "# model_name, ctx_len = \"gpt-4o-2024-08-06\", 128000\n",
+    "model_name, ctx_len = \"llama3.1:8b-instruct-q8_0\", 128000\n",
     "# model_name, ctx_len = \"solar-pro:latest\", 128000\n",
     "# model_name, ctx_len = \"hermes3:8b\", 128000\n",
     "# model_name, ctx_len = \"gemma2:latest\", 8192\n",
@@ -99,15 +108,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LOpenAI?"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,9 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 16.3M  100 16.3M    0     0  11.5M      0  0:00:01  0:00:01 --:--:-- 11.5M\n"
+     ]
+    }
+   ],
    "source": [
     "# SEC rules and regulations\n",
     "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II\" -H \"accept: application/xml\" > title-17.xml"
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
